# PingPal

./: .gitignore  PUBG_SERVER_DETECTION_GUIDE.md  WIREGUARD_REGISTRATION_CHECK.md
.cursor/skills/nigping-project/: SKILL.md
.cursor/skills/rust-coding-skill/: examples.md  reference.md
.cursor/skills/rust-systems-programming/: EXAMPLES.md  README.md
.cursor/skills/strategic-compact/: suggest-compact.sh
.cursor/skills/tauri/: SKILL.md
Tauri/: package.json  pnpm-lock.yaml  vite.config.ts
Tauri/src/: App.vue
Tauri/src-tauri/: Cargo.toml
Tauri/src-tauri/capabilities/: default.json
Tauri/src-tauri/src/: dev_monitor.rs  error.rs  lib.rs  network_monitor.rs  privileges.rs  service_manager.rs  vpn.rs
Tauri/src/components/: DeviceManager.vue  Login.vue  ServerDetection.vue  ServerGlobe.vue  VPNRegistration.vue
Tauri/src/components/ui/: DevHUD.vue
Tauri/src/composables/: useAuth.ts  useClientGeo.ts  useGameServerCatalog.ts  useGameTrafficMonitor.ts  useVpnProfile.ts  useWireGuardSession.ts
Tauri/src/data/: games.ts
Tauri/src/layouts/: MainLayout.vue
Tauri/src/lib/: apiBase.ts  apiClient.ts  http.ts  store.ts  tauriCommands.ts  vpnProfileCheck.ts
Tauri/src/router/: index.ts
Tauri/src/stores/: authStore.ts  trafficMonitorStore.ts  vpnStore.ts
Tauri/src/test/: setup.ts
Tauri/src/views/: DashboardView.vue  DevicesView.vue  GameDetailView.vue  GameLibraryView.vue  RegisterView.vue  SettingsView.vue
backend/: populate_ranges.ts
backend/db/: 20260415_add_user_id_to_game_ip_ranges.sql  vpn_setup.sql
backend/src/: app.ts  index.ts  password-utils.ts
backend/src/api/: geo.ts  vpn.ts
backend/src/db/: supabase.ts
vps-agent/: docker-compose.yml
vps-agent/src/: index.ts
(+22 files in other folders)
