[package]
name = "nigping"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "nigping"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nigping_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["sync", "time", "macros"] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
] }
windows-service = "0.7"
# Network monitoring APIs
windows = { version = "0.58", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }
# Time utilities
chrono = "0.4"
# Optional: IP geolocation
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# Device name detection
hostname = "0.4"
tauri-plugin-store = "2.4.2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "wg_service"
path = "src/bin/wg_service.rs"

[[bin]]
name = "nigping"
path = "src/main.rs"

